--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -10,6 +10,7 @@ obey rules of game
 add comment to a match
 
 == NOTES TO THIS RELEASE ==
+improve documentation with phpMyAdmin
 use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
 prices to book with guest, use normal checkout procedure
 find a way to delete filters, eventho we have sent mails to this filter
