Removed empty fields in user filter.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,6 @@
 == TODO ==
+ajax on quick search box
+when sending mails to a search, copy search into static filter only used by mail module
 plan has to give error if booking already exists
 quick search on multiple users, go to search and put query in name
 what happens on dobbelt click on confirm order
