Added translation for group.

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -1982,6 +1982,11 @@
         <source>Order number: %order%</source>
         <target>Ordernummer: %order%</target>
       </trans-unit>
+      <trans-unit id="499">
+        <source>Members of %group%</source>
+        <target>Medlemmer af %group%</target>
+      </trans-unit>
+
     </body>
   </file>
 </xliff>
