--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,5 @@
 == TODO ==
-add error codes to booking errors
+add error codes to booking API errors
 when sending mails to a search, copy search into static filter only used by mail module
 plan has to give error if booking already exists
 what happens on dobbelt click on confirm order
