--- a/README
+++ b/README
@@ -2,8 +2,8 @@ ClubMaster
 ==========
 :Author:    Michael Holm Kristensen
 :Email:     <hollo@hollo.dk>
-:Date:      2012-02-15
-:Revision:  20
+:Date:      2012-04-14
+:Revision:  21
 
 
 Feedback
@@ -284,6 +284,20 @@ Parameters:
 {end}: 2011-01-02
 
 Success response will be HTTP response code 200, and a json response with all teams
+
+
+Get users events
+~~~~~~~~~~~~~~~~
+URL: /api/users/events/
+URL: /api/users/events/{start}
+URL: /api/users/events/{start}/{end}
+Method: GET
+
+Parameters:
+{start}: 2011-01-01
+{end}: 2011-01-02
+
+Success response will be HTTP response code 200, and a json response with all events
 
 
 Attend team
