--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -14,36 +14,38 @@ obey rules of game
 add comment to a match
 
 == NOTES TO THIS RELEASE ==
+make that you have to checkin in order to confirm your booking, otherwice it will be free
+use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
+prices to book with guest, use normal checkout procedure
+problems with generate repetitions, check up on this
+add error codes to booking API errors
+quick create intervals when creating the field
+can we avoid use intl?
+can we avoid migrations to use so much memory?
 make sure coupon works with economic
 support multiple times on the same interval
 sort users in IE9 missing style
 preselect country to something automatic
 bulk create order to users
-add error codes to booking API errors
 talk with EF sikring regarding to import of users:
   - change bulk users
   - import users
 dont have specific error login page
 improve documentation with phpMyAdmin
-use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
-prices to book with guest, use normal checkout procedure
-make that you have to checkin in order to confirm your booking, otherwice it will be free
 remove all fixtures, find a way to init all data in an another way
 improve documentation of config file
 improve documentation of overwrite mail template files
 improve documentation of overwrite pages in general
-problems with generate repetitions, check up on this
 test for banning does not work, it pick wrong user
 do routing to annotation instead of, check default install of symfony bundle
 merge migrations into one file
-quick create intervals when creating the field
 does lifetime membership works?
 on a fresh install, let index.php redirect to config.php
 configurationbundle and installerbundle should be disabled after install
 find a way that the api does not care if it ends on / or not
 
 == NOTES TO LATER ==
-add group on product
+add product on dynamic group
 consider using knpmenu bundle instead of our own
 cannot install when parameter is not on english
 cannot install with multiple payment plugins
