Added processed to match.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -4,6 +4,8 @@ make atk members smaller, start from 620 and something, michael holm on 700 is a
 
 == RANKING ==
 add ranking
+show all league details, invite only, how can play, start and end date
+can we avoid double click on forms, like save a match
 
 == NOTES TO THIS RELEASE ==
 make that you have to checkin in order to confirm your booking, otherwice it will be free
