--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,7 @@ atk check for doubles
 make atk members smaller, start from 620 and something, michael holm on 700 is an error
 
 == NEXT TOPICS ==
+ranking only for men, women or both
 translate match module
 design on match module
 make that you have to checkin in order to confirm your booking, otherwice it will be free
