--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -13,6 +13,8 @@ fix economic
 sort users in IE9 missing style
 
 == NOTES TO THIS RELEASE ==
+fix colors in checkout
+list undelivered orders on admin dashboard
 use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
 prices to book with guest, use normal checkout procedure
 problems with generate repetitions, check up on this
