--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,7 @@
 == ATK ==
 atk check for doubles
 make atk members smaller, start from 620 and something, michael holm on 700 is an error
+set account_numbers correct on new products
 
 == NEXT TOPICS ==
 ranking only for men, women or both
