Translated match module.

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2098,6 +2098,146 @@
         <source>Payment from %user%, order %order%</source>
         <target>Betaling fra %user%, ordre %order%</target>
       </trans-unit>
+      <trans-unit id="528">
+        <source>Match</source>
+        <target>Kamp</target>
+      </trans-unit>
+      <trans-unit id="529">
+        <source>Point won</source>
+        <target>Point vundet</target>
+      </trans-unit>
+      <trans-unit id="530">
+        <source>Point lost</source>
+        <target>Point tabt</target>
+      </trans-unit>
+      <trans-unit id="531">
+        <source>Match same player</source>
+        <target>Kamp samme modstander</target>
+      </trans-unit>
+      <trans-unit id="532">
+        <source>Create rule</source>
+        <target>Opret regl</target>
+      </trans-unit>
+      <trans-unit id="533">
+        <source>Create league</source>
+        <target>Opret liga</target>
+      </trans-unit>
+      <trans-unit id="534">
+        <source>Invite only</source>
+        <target>Kun invitation</target>
+      </trans-unit>
+      <trans-unit id="535">
+        <source>Open for all</source>
+        <target>Åben for alle</target>
+      </trans-unit>
+      <trans-unit id="536">
+        <source>Rule</source>
+        <target>Regl</target>
+      </trans-unit>
+      <trans-unit id="537">
+        <source>Game set</source>
+        <target>Spil sæt</target>
+      </trans-unit>
+      <trans-unit id="538">
+        <source>Back to league</source>
+        <target>Tilbage til liga</target>
+      </trans-unit>
+      <trans-unit id="539">
+        <source>Add players to league</source>
+        <target>Tilføj spillere til liga</target>
+      </trans-unit>
+      <trans-unit id="540">
+        <source>Add player</source>
+        <target>Tilføj spiller</target>
+      </trans-unit>
+      <trans-unit id="541">
+        <source>Here you can add players for this tournament.</source>
+        <target>Her kan du tilføje spillere til denne turnering.</target>
+      </trans-unit>
+      <trans-unit id="542">
+        <source>Player</source>
+        <target>Spiller</target>
+      </trans-unit>
+      <trans-unit id="543">
+        <source>Create match</source>
+        <target>Opret kamp</target>
+      </trans-unit>
+      <trans-unit id="544">
+        <source>Ranking</source>
+        <target>Rangering</target>
+      </trans-unit>
+      <trans-unit id="545">
+        <source>Rank</source>
+        <target>Rang</target>
+      </trans-unit>
+      <trans-unit id="546">
+        <source>Played</source>
+        <target>Spillet</target>
+      </trans-unit>
+      <trans-unit id="547">
+        <source>Won</source>
+        <target>Vundet</target>
+      </trans-unit>
+      <trans-unit id="548">
+        <source>Lost</source>
+        <target>Tabt</target>
+      </trans-unit>
+      <trans-unit id="549">
+        <source>Won %</source>
+        <target>Vundet %</target>
+      </trans-unit>
+      <trans-unit id="550">
+        <source>Point</source>
+        <target>Point</target>
+      </trans-unit>
+      <trans-unit id="551">
+        <source>Recent matches</source>
+        <target>Senest kampe</target>
+      </trans-unit>
+      <trans-unit id="552">
+        <source>Team one</source>
+        <target>Hold 1</target>
+      </trans-unit>
+      <trans-unit id="553">
+        <source>Team two</source>
+        <target>Hold 2</target>
+      </trans-unit>
+      <trans-unit id="554">
+        <source>Score</source>
+        <target>Score</target>
+      </trans-unit>
+      <trans-unit id="555">
+        <source>Add comment</source>
+        <target>Tilføj kommentar</target>
+      </trans-unit>
+      <trans-unit id="556">
+        <source>Delete match</source>
+        <target>Slet kamp</target>
+      </trans-unit>
+      <trans-unit id="557">
+        <source>There are no comments for this match.</source>
+        <target>Der er ingen kommentarer til denne kamp.</target>
+      </trans-unit>
+      <trans-unit id="558">
+        <source>League type</source>
+        <target>Liga type</target>
+      </trans-unit>
+      <trans-unit id="559">
+        <source>Sets per match</source>
+        <target>Sæt pr kamp</target>
+      </trans-unit>
+      <trans-unit id="560">
+        <source>Point for victory</source>
+        <target>Point for sejr</target>
+      </trans-unit>
+      <trans-unit id="561">
+        <source>Point for defeat</source>
+        <target>Point for nederlag</target>
+      </trans-unit>
+      <trans-unit id="562">
+        <source>Matches with same opponent</source>
+        <target>Kampe med samme modstander</target>
+      </trans-unit>
 
     </body>
   </file>
