Removed unused use of intl clas.

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -1691,7 +1691,7 @@
         <target>Onsdag</target>
       </trans-unit>
       <trans-unit id="425">
-        <source>Tursday</source>
+        <source>Thursday</source>
         <target>Torsdag</target>
       </trans-unit>
       <trans-unit id="426">
