--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,10 +1,19 @@
+== NIBE ==
+create memberships to all
+remove all products except senior
+rename senior to more default membership name
+make rigth order statuses
+make sure all orders that is delivered is delivered
+make sure all orders taht is cancelled is cancelled
+
 == ATK ==
 atk check for doubles
 make sure all orders that is delivered is delivered
 make sure all orders taht is cancelled is cancelled
-make rigth order statuses for ATK and nibe
+make rigth order statuses
 
 == NEXT TOPICS ==
+add menu item welcome_page edit
 design on match module
 quick create intervals when creating the field
 make sure coupon works with economic
