--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -13,6 +13,7 @@ make sure all orders taht is cancelled is cancelled
 make rigth order statuses
 
 == NEXT TOPICS ==
+fix currentcy intl class must not be required
 remove all fixtures, find a way to init all data in an another way
 design on match module
 quick create intervals when creating the field
