Added translation for no leagues

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2238,6 +2238,10 @@
         <source>Matches with same opponent</source>
         <target>Kampe med samme modstander</target>
       </trans-unit>
+      <trans-unit id="563">
+        <source>There are no leagues.</source>
+        <target>Der er ingen ligaer.</target>
+      </trans-unit>
 
     </body>
   </file>
