--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2242,6 +2242,10 @@
         <source>There are no leagues.</source>
         <target>Der er ingen ligaer.</target>
       </trans-unit>
+      <trans-unit id="564">
+        <source>No matches has been played.</source>
+        <target>Der er ikke spillet nogen kampe.</target>
+      </trans-unit>
 
     </body>
   </file>
