--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -12,11 +12,12 @@ atk check for doubles
 
 == NEXT TOPICS ==
 remove all fixtures, find a way to init all data in an another way
-quick create intervals when creating the field
 make sure coupon works with economic
 problems with generate repetitions, check up on this
 
 == NOTES TO THIS RELEASE ==
+make the API force browser to refresh
+make a way to configure the touch screen client, ever cookie and configure through clubmaster?
 make a button to accept business terms
 use guest_allowed_unpaid, validate unpaid orders with product as of type, guest_booking
 prices to book with guest, use normal checkout procedure
@@ -39,6 +40,7 @@ configurationbundle and installerbundle should be disabled after install
 find a way that the api does not care if it ends on / or not
 
 == NOTES TO LATER ==
+quick create intervals when creating the field
 add leagues to tournaments, use of tags or something
 add product on dynamic group
 cannot install when parameter is not on english
