--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -13,9 +13,12 @@ atk check for doubles
 == NEXT TOPICS ==
 remove all fixtures, find a way to init all data in an another way
 make sure coupon works with economic
+make sure guest book works with economic
 problems with generate repetitions, check up on this
 
 == NOTES TO THIS RELEASE ==
+better view shipping and payment method used in order view
+consider make guest book and coupon to products too, that will make the account_number much easier
 make the API force browser to refresh
 make a way to configure the touch screen client, ever cookie and configure through clubmaster?
 make a button to accept business terms
